--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,6 @@
   <%= menu_link_to "TOP", root_path %>
   <%= menu_link_to "ニュース", "#" %>
   <%= menu_link_to "ブログ", "#" %>
-  <%= menu_link_to "会員名簿", "#" %>
+  <%= menu_link_to "会員名簿", :members %>
   <%= menu_link_to "管理ページ", "#" %>
 </div>
