--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <%= render "shared/header" %>
   </div>
   <div id="content">
+    <% if flash.notice %>
+      <p class="notice"><%= flash.notice %></p>
+    <% end %>
+
     <%= yield %>
   </div>
   <div id="sidebar">
@@ -21,6 +25,7 @@
   <div id="footer">
     <%= render "shared/footer" %>
   </div>
+  <%= debug(params) if Rails.env.development? %>
 </div>
 
 
