--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <%= image_tag("rails.jpg", size: "272x48", alt: "Morning Glory") %>
-
+<%= l(Time.now, format: :medium) %>
 <div class="menubar">
   <%= menu_link_to "TOP", root_path %>
   <%= menu_link_to "ニュース", "#" %>
