--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <%= l(Time.now, format: :medium) %>
 <div class="menubar">
   <%= menu_link_to "TOP", root_path %>
-  <%= menu_link_to "ニュース", "#" %>
+  <%= menu_link_to "ニュース", :articles %>
   <%= menu_link_to "ブログ", "#" %>
   <%= menu_link_to "会員名簿", :members %>
   <%= menu_link_to "管理ページ", "#" %>
