--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,9 +19,11 @@
     <td>
       <%= f.check_box :no_expiration %>
       <%= f.label :no_expiration %> <br>
-      <%= f.datetime_select :expired_at,
-          start_year: 2000, end_year: Time.now.year + 1,
-          user_month_numbers: true %>
+      <div id="article_expired_at">
+        <%= f.datetime_select :expired_at,
+            start_year: 2000, end_year: Time.now.year + 1,
+            user_month_numbers: true %>
+      </div>
     </td>
   </tr>
   <tr>
