--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -30,11 +30,25 @@
     <th><%= f.label :email %></th>
     <td><%= f.text_field :email %></td>
   </tr>
+  <% if controller.kind_of?(MembersController) %>
   <tr>
     <th>管理者</th>
     <td>
-      <%= f.check_box :administrator %>
+      <%= f.check_box :administrator, disabled: !current_member.administrator? %>
       <%= f.label :administrator %>
     </td>
   </tr>
+  <% end %>
+  <tr>
+    <th><%= f.label :password %></th>
+    <td><%= f.password_field :password %></td>
+  </tr>
+  <tr>
+    <th><%= f.label :password_confirmation %></th>
+    <td><%= f.password_field :password_confirmation %></td>
+  </tr>
 </table>
+
+<% unless @member.new_record? %>
+<p>パスワードを変更しない時は、パスワード入力欄を空にしてください。</p>
+<% end %>
