--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,17 @@
 <%= image_tag("rails.jpg", size: "272x48", alt: "Morning Glory") %>
-<%= l(Time.now, format: :medium) %>
+
+<% if current_member %>
+<p class="member">
+  <%= link_to current_member.name + "さん", :account %> |
+  <%= link_to "ログアウト", :session, method: :delete, data: {confirm: "ログアウトしますか？"} %>
+</p>
+<% end %>
 <div class="menubar">
   <%= menu_link_to "TOP", root_path %>
   <%= menu_link_to "ニュース", :articles %>
   <%= menu_link_to "ブログ", "#" %>
-  <%= menu_link_to "会員名簿", :members %>
-  <%= menu_link_to "管理ページ", "#" %>
+  <% if current_member %>
+    <%= menu_link_to "会員名簿", :members %>
+    <%= menu_link_to "管理ページ", "#" %>
+  <% end %>
 </div>
