--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,5 +1,21 @@
 <%= render "shared/errors", obj: @member %>
 <table class="attr">
+  <%= f.fields_for :image do |imgf| %>
+    <tr>
+      <th><%= imgf.label :uploaded_image %></th>
+      <td>
+        <%= imgf.file_field :uploaded_image %>
+        <% if !imgf.object.new_record? && imgf.object.errors.empty? %>
+          <div>
+            <%= member_image_tag @member, width: 60 %>
+            <%= imgf.check_box :_destroy %>
+            <%= imgf.label :_destroy %>
+            <%= imgf.hidden_field :id %>
+          </div>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
   <tr>
     <th><%= f.label :number %></th>
     <td><%= f.text_field :number, size: 8 %></td>
