--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
 <div class="menubar">
   <%= menu_link_to "TOP", root_path %>
   <%= menu_link_to "ニュース", :articles %>
-  <%= menu_link_to "ブログ", "#" %>
+  <%= menu_link_to "ブログ", :entries %>
   <% if current_member %>
     <%= menu_link_to "会員名簿", :members %>
     <%= menu_link_to "管理ページ", "#" %>
