--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "ニュース記事の新規登録" %>
 <h1><%= @page_title %></h1>
-<%= form_for @article do |f| %>
+<%= form_for [:admin,@article] do |f| %>
 <%= render "form", f: f %>
 <p><%= f.submit %></p>
 <% end %>
