--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,9 +1,9 @@
 <%= @page_title = "ニュース記事の編集" %>
 <h1><%= @page_title %></h1>
 
-<p><%= link_to "記事の詳細に戻る", @article %></p>
+<p><%= link_to "記事の詳細に戻る", [:admin, @article] %></p>
 
-<%= form_for @article do |f| %>
+<%= form_for [:admin, @article] do |f| %>
 <%= render "form", f:f %>
 <p><%= f.submit %></p>
 <% end %>
