--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,9 +1,9 @@
 <%= @page_title = "会員情報の編集" %>
 <h1><%= @page_title %></h1>
 
-<p><%= link_to "会員の詳細に戻る", @member %></p>
+<p><%= link_to "会員の詳細に戻る", [:admin, @member] %></p>
 
-<%= form_for @member do |f| %>
+<%= form_for [:admin, @member] do |f| %>
 <%= render "form", f:f %>
 <p><%= f.submit %></p>
 <% end %>
