--- a/app/views/admin/members/new.html.erb
+++ b/app/views/admin/members/new.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "会員の新規登録" %>
 <h1><%= @page_title %></h1>
-<%= form_for @member do |f| %>
+<%= form_for [:admin, @member] do |f| %>
 <%= render "form", f: f %>
 <p><%= f.submit %></p>
 <% end %>
