--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,12 +6,23 @@
   <%= link_to "ログアウト", :session, method: :delete, data: {confirm: "ログアウトしますか？"} %>
 </p>
 <% end %>
+<% if controller.kind_of?(Admin::Base) %>
+<div class="menubar" id="admin_menubar">
+  <%= menu_link_to "管理TOP", :admin_root %>
+  &nbsp;|&nbsp;<%= menu_link_to "会員管理", :admin_members %>
+  &nbsp;|&nbsp;<%= menu_link_to "記事管理", :admin_articles %>
+  &nbsp;|&nbsp;<%= menu_link_to "TOP", :root %>
+</div>
+<% else %>
 <div class="menubar">
   <%= menu_link_to "TOP", root_path %>
   <%= menu_link_to "ニュース", :articles %>
   <%= menu_link_to "ブログ", :entries %>
   <% if current_member %>
     <%= menu_link_to "会員名簿", :members %>
-    <%= menu_link_to "管理ページ", "#" %>
+    <% if current_member.administrator? %>
+      <%= menu_link_to "管理ページ", :admin_root %>
+    <% end %>
   <% end %>
 </div>
+<% end %>
